--- a/Menu/test-output/old/Default suite/classes.html
+++ b/Menu/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setString</td>
+<td>validPriceValue</td>
 <td>group1 </td>
 </tr>
 <tr>
@@ -23,6 +23,21 @@
 <td>&nbsp;</td>
 <td>zeroPriceValue</td>
 <td>group1 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setString</td>
+<td>group2 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validValue</td>
+<td>group2 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validTitleValue</td>
+<td>group2 </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
