--- a/Menu/test-output/old/Default suite/groups.html
+++ b/Menu/test-output/old/Default suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>group1</td><td>IngredientTest.setString()[pri:0, instance:menu.IngredientTest@2855e552]<br/>IngredientTest.underZeroPriceValue()[pri:0, instance:menu.IngredientTest@2855e552]<br/>IngredientTest.zeroPriceValue()[pri:0, instance:menu.IngredientTest@2855e552]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>group1</td><td>IngredientTest.validPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/>IngredientTest.underZeroPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/>IngredientTest.zeroPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/></td></tr>
+<tr><td>group2</td><td>IngredientTest.validTitleValue()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/>IngredientTest.setString()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/>IngredientTest.validValue()[pri:0, instance:menu.IngredientTest@25a6cc45]<br/></td></tr>
 </table>
