--- a/Menu/test-output/old/Default suite/methods.html
+++ b/Menu/test-output/old/Default suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3bfc5">  <td>15/06/22 19:40:06</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;IngredientTest.beforeTest()[pri:0, instance:menu.IngredientTest@2855e552]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335593353</td>   <td></td> </tr>
-<tr bgcolor="b3bfc5">  <td>15/06/22 19:40:06</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.setString()[pri:0, instance:menu.IngredientTest@2855e552]">setString</td> 
-  <td>main@1335593353</td>   <td></td> </tr>
-<tr bgcolor="b3bfc5">  <td>15/06/22 19:40:06</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.underZeroPriceValue()[pri:0, instance:menu.IngredientTest@2855e552]">underZeroPriceValue</td> 
-  <td>main@1335593353</td>   <td></td> </tr>
-<tr bgcolor="b3bfc5">  <td>15/06/22 19:40:06</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.zeroPriceValue()[pri:0, instance:menu.IngredientTest@2855e552]">zeroPriceValue</td> 
-  <td>main@1335593353</td>   <td></td> </tr>
-<tr bgcolor="b3bfc5">  <td>15/06/22 19:40:06</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IngredientTest.afterClass()[pri:0, instance:menu.IngredientTest@2855e552]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335593353</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;IngredientTest.beforeTest()[pri:0, instance:menu.IngredientTest@25a6cc45]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.setString()[pri:0, instance:menu.IngredientTest@25a6cc45]">setString</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.underZeroPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]">underZeroPriceValue</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.validPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]">validPriceValue</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.validTitleValue()[pri:0, instance:menu.IngredientTest@25a6cc45]">validTitleValue</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.validValue()[pri:0, instance:menu.IngredientTest@25a6cc45]">validValue</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IngredientTest.zeroPriceValue()[pri:0, instance:menu.IngredientTest@25a6cc45]">zeroPriceValue</td> 
+  <td>main@935344593</td>   <td></td> </tr>
+<tr bgcolor="fdbba8">  <td>15/06/23 16:14:19</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IngredientTest.afterClass()[pri:0, instance:menu.IngredientTest@25a6cc45]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@935344593</td>   <td></td> </tr>
 </table>
